Fix too large images on mobile

--- a/styles/posts.module.scss
+++ b/styles/posts.module.scss
@@ -40,11 +40,11 @@ $standard-margin: 0.7rem;
 .posts img {
   display: block;
   margin: auto;
-  max-width: $element-max-width;
-  max-height: 600px;
+  max-width: 100%;
   border-radius: 10px;
   margin-top: 3rem;
   margin-bottom: 3rem;
+  object-fit: contain;
 }
 
 .posts li {
